Fri Apr 07 19:13:24 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: We don't use strcasecmp, so don't probe for it.

Fri Apr 07 18:30:40 BST 2006  Olly Betts <olly@survex.com>

	* common/utils.h: Fixes for MSVC7 compilation.

Fri Apr 07 17:19:43 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc,backends/quartz/btree.cc: Fixes for
	  MSVC compilation.

Fri Apr 07 16:04:08 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.h: Fix incorrect example code in
	  documentation comment.
	* backends/flint/flint_table.cc,backends/flint/flint_table.h:
	  Remove unused method FlintTable::find_key().

Fri Apr 07 16:02:40 BST 2006  Olly Betts <olly@survex.com>

	* AUTHORS: Updated.

Fri Apr 07 15:58:31 BST 2006  Olly Betts <olly@survex.com>

	* debian/control.in: copydatabase and xapian-compact are packaged
	  in xapian-tools, so add them to the documented list of tools
	  included.

Fri Apr 07 15:12:43 BST 2006  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Set xapian-tcpsrv to allow 5 connections in the
	  listen queue instead of just one.

Fri Apr 07 13:28:15 BST 2006  Olly Betts <olly@survex.com>

	* tests/remotetest.cc: Check mset size in tcpmatch1.

Fri Apr 07 01:26:03 BST 2006  Olly Betts <olly@survex.com>

	* xapian.spec.in: Man pages may be gzipped.

Thu Apr 06 14:41:29 BST 2006  Olly Betts <olly@survex.com>

	* HACKING: aclocal is part of automake, not autoconf.

Thu Apr 06 01:29:21 BST 2006  Olly Betts <olly@survex.com>

	* bin/,examples/copydatabase.cc,examples/delve.cc,examples/quest.cc:
	  In the "--help" output, add "Options:" before the list of options.

Thu Apr 06 01:11:31 BST 2006  Olly Betts <olly@survex.com>

	* xapian-config.in: Tweak to improve help2man output.

Wed Apr 05 16:26:15 BST 2006  Fabrice Colin

	* xapian.spec.in: Package man pages.

Wed Apr 05 16:23:49 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile.am,examples/Makefile.am: Include generated